<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.login.pattern.PatternLoginFragment">

    <ImageView
        android:id="@+id/imageView_patternLogin_profile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/imageView_contentDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView_patternLogin_authorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/H2WithDarkTextColor"
        android:text="@string/patternLogin_authorization"
        app:layout_constraintTop_toBottomOf="@id/imageView_patternLogin_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView_patternLogin_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/Body3WithTextColor"
        android:text="@string/patternLogin_messageDraw"
        app:layout_constraintTop_toBottomOf="@id/textView_patternLogin_authorization"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.andrognito.patternlockview.PatternLockView
        android:id="@+id/patternLockView_patternLogin_pattern"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:dotCount="@integer/PatternDotCount"
        app:aspectRatioEnabled="true"
        app:aspectRatio="square"
        app:normalStateColor="#000000"
        app:correctStateColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/textView_patternLogin_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView_patternLogin_skipToPassword"/>

    <TextView
        android:id="@+id/textView_patternLogin_skipToPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textAppearance="@style/H1WithTertiaryColor"
        android:text="@string/patternLogin_skipToPattern"
        android:gravity="center"
        android:drawablePadding="8dp"
        app:drawableEndCompat="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>