<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity"
        android:background="@color/background">
    <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:civ_border="false"
            android:src="@drawable/circleshape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView_registration_header" android:layout_marginBottom="20dp"/>

    <TextView
            android:text="@string/registration_registration"
            style="@style/H2HeadLineDarkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_registration_header" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/textView_registration_guid"/>
    <TextView
            style="@style/Body3LightText"
            android:text="@string/registration_guid"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/textView_registration_guid" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintBottom_toTopOf="@+id/cardView_registration_phoneInput"
            android:layout_marginBottom="20dp"/>
    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="156dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/cardView_registration_phoneInput"
            app:cardCornerRadius="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="296dp"
                    android:layout_height="48dp"
                    android:background="@drawable/corner_shape"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/button_registarion_continue"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginTop="20dp">

                <ImageButton
                        android:src="@drawable/iran_flag"
                        android:layout_width="28dp" android:layout_height="20dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/imagebutton_registration_flags"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
                <TextView
                        android:id="@+id/textView_registration_countryCode"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/registration_iranCode"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imagebutton_registration_flags"
                        android:layout_marginStart="20dp"/>
                <EditText
                        android:id="@+id/editText_registration_phoneInput"
                        android:hint="@string/registration_hint"
                        android:background="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView_registration_countryCode"
                        android:layout_marginStart="8dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                    app:layout_constraintCircleRadius="25dp"
                    android:enabled="false"
                    android:background="@drawable/continue_button_selector"
                    android:text="@string/registration_continue"
                    android:layout_width="296dp"
                    android:layout_height="48dp" android:id="@+id/button_registarion_continue"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>